Project

General

Profile

Actions

Bug #18458

closed

poen wrongly delete routed pg stats op before receive pg stats ack

Added by mingxin liu over 7 years ago. Updated about 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel, kraken
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

a peon may forward the pgstats to leader, and record it locally, but leader will check if
osd has the latest map before process, if not, will use a route op to indicate poen to send it,
then poen will delete routed op when fininaly send out which make poen cannot send pgstatack
when leader has processed the pgstat update. so osd will always track this op until reach a
threshold block pgstats sending, at worst, reopen mon session.


Related issues 2 (0 open2 closed)

Copied to Ceph - Backport #18553: jewel: peon wrongly delete routed pg stats op before receive pg stats ackResolvedNathan CutlerActions
Copied to Ceph - Backport #18554: kraken: poen wrongly delete routed pg stats op before receive pg stats ackResolvedNathan CutlerActions
Actions #1

Updated by Kefu Chai over 7 years ago

  • Status changed from New to Fix Under Review
  • Assignee changed from Kefu Chai to mingxin liu
  • Backport set to jewel, kraken

https://github.com/ceph/ceph/pull/12784

this issue might burden monitor a little bit by

  • reconnecting it when the connected OSD is not sync'ed with monitor for a while and fails to receive the ack after sending the pg stats with the old osdmap epoch.
  • sending a duplicated osdmap message from both peon and leader to the out-sync'ed osd. actually only one osdmap message would suffice.
Actions #2

Updated by Kefu Chai over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18553: jewel: peon wrongly delete routed pg stats op before receive pg stats ack added
Actions #4

Updated by Nathan Cutler over 7 years ago

  • Copied to Backport #18554: kraken: poen wrongly delete routed pg stats op before receive pg stats ack added
Actions #5

Updated by Nathan Cutler about 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF